[metadata]
name = ghtools
author = Min RK, Jupyter Contributors
author-email = benjaminrk@gmail.com
summary = 
description-file = README.md
home-page = https://launchpad.net/pbr
license = BSD-2-Clause
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    github
[files]
packages =
    ghtools
[entry_points]
console_scripts =
    backport-pr = ghtools.backport:main
    github-stats = ghtools.stats:main

