[metadata]
name = ghpro
author = Min RK, Jupyter Contributors
author-email = benjaminrk@gmail.com
summary = 
description-file = README.md
home-page = https://launchpad.net/pbr
license = BSD-2-Clause
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    github
[files]
packages =
    ghpro
[entry_points]
console_scripts =
    backport-pr = ghpro.backport:main
    github-stats = ghpro.stats:main

